5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_1017.log
== TEST (2019-03-24 18:00:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de p1:")))
t2 = radians(float(input("latitude de p2")))
g2 = radians(float(input("latitude de p2")))
R=6371,01

-- ERROR:
File "XXXX", line 9
    R=6371,01
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:05:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de p1:")))
t2 = radians(float(input("latitude de p2")))
g2 = radians(float(input("latitude de p2")))
R = 6371,01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 9
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:05:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de p1:")))
t2 = radians(float(input("latitude de p2")))
g2 = radians(float(input("latitude de p2")))
R = 6371,01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- EXECUTION TIME:
0.15698
-- ERROR:
  File "/home/codebench/codes/1602/1017/main.py", line 9
    R = 6371,01
              ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:06:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1:" )))
g1 = radians(float(input("latitude de p1:" )))
t2 = radians(float(input("latitude de p2:" )))
g2 = radians(float(input("latitude de p2:" )))
R = 6371,01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 9
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:06:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1:" )))
g1 = radians(float(input("latitude de p1:" )))
t2 = radians(float(input("latitude de p2:" )))
g2 = radians(float(input("latitude de p2:" )))
R = 6371.01
d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d=R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:07:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1:" )))
g1 = radians(float(input("latitude de p1:" )))
t2 = radians(float(input("latitude de p2:" )))
g2 = radians(float(input("latitude de p2:" )))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:07:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1:" )))
g1 = radians(float(input("latitude de p1:" )))
t2 = radians(float(input("latitude de p2:" )))
g2 = radians(float(input("latitude de p2:" )))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- EXECUTION TIME:
0.218144
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
